# Music-Manager

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
backend/: data.c  data.h  duplicates.c  duplicates.h  metadata.c  metadata.h
backend/ID3v2dot3/: editID3v2dot3.c  readID3v2dot3.c  readID3v2dot3.h
backend/ID3v2dot4/: editID3v2dot4.c  readID3v2dot4.c  readID3v2dot4.h
backend/structures/: dynarray.c  list.c
clay/: clay.h
frontend/: components.c  components.h  front.c  front.h  globals.c  globals.h
resources/: GOTHIC.c  NOTO.c  NOTOI.c
src/: main.c
